View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032239 | Community | OCCT:Data Exchange | public | 2021-03-22 20:45 | 2021-11-01 18:13 |
Reporter | robertlipman | Assigned To | gka | ||
Priority | normal | Severity | major | ||
Status | new | Resolution | open | ||
Product Version | 6.3.1 | ||||
Target Version | 7.7.0 | ||||
Summary | 0032239: Data Exchange, STEP import - bounding box is too large | ||||
Description | The bounding box is too large for the attached STEP file. The X range as reported by CAD Assistant is 157.233mm. However, measuring the X range in another viewer (eDrawings) shows 106.182mm. The Y and Z range is also too large. | ||||
Steps To Reproduce | Open the attached file in CAD Assistant and get the range. Measure the range some other way and compare the values.pload XDE OCAF VISUALIZATION MODELING dtracelevel trace testreadstep {UTG RED DOT OPTIC.STEP} s checkshape s s bounding s Output: -- The Shape s has problems : Check Count ------------------------------------------------ Unorientable Shape ....................... 4 Not Closed ............................... 4 ------------------------------------------------ *** Shapes with problems : 8 WIRE : 4 Items -> compound named s_w FACE : 4 Items -> compound named s_f -82.043211434255824 -97.41395356722937 -97.41395356722937 73.632312330445473 97.41395356722937 97.41395356722937 | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
UTG RED DOT OPTIC.zip (3,694,975 bytes) |
|
optic_KO.png (25,608 bytes) |
|
optic_lenses_KO.png (8,318 bytes) |
|
STEP import produces 4 unorientable Faces (for lenses). So the problem could be reformulated as fixing STEP import to produce a valid shape (or to determine that specific STEP file is invalid and has no proper fix). Afterwards, bounding box on fixed shape should has expected dimensions. -- The Shape s has problems : Check Count ------------------------------------------------ Unorientable Shape ....................... 4 Not Closed ............................... 4 ------------------------------------------------ *** Shapes with problems : 8 WIRE : 4 Items -> compound named s_w FACE : 4 Items -> compound named s_f -82.043211434255824 -97.41395356722937 -97.41395356722937 73.632312330445473 97.41395356722937 97.41395356722937 |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-03-22 20:45 | robertlipman | New Issue | |
2021-03-22 20:45 | robertlipman | Assigned To | => gka |
2021-03-22 20:45 | robertlipman | File Added: UTG RED DOT OPTIC.zip | |
2021-03-24 10:14 | kgv | Target Version | => 7.6.0 |
2021-03-24 10:14 | kgv | Summary | Bounding box to large => BRepBndLib returns too large Bounding Box |
2021-09-25 17:39 | kgv | File Added: optic_KO.png | |
2021-09-25 17:39 | kgv | File Added: optic_lenses_KO.png | |
2021-09-25 17:39 | kgv | Steps to Reproduce Updated | |
2021-09-25 17:43 | kgv | Product Version | 7.5.0 => 6.3.1 |
2021-09-25 17:44 | kgv | Steps to Reproduce Updated | |
2021-09-25 17:45 | kgv | Summary | BRepBndLib returns too large Bounding Box => Data Exchange, STEP import - BRepBndLib returns too large Bounding Box |
2021-09-25 17:49 | kgv | Note Added: 0104375 | |
2021-09-25 17:49 | kgv | Note Edited: 0104375 | |
2021-09-25 17:50 | kgv | Note Edited: 0104375 | |
2021-09-25 17:50 | kgv | Note Edited: 0104375 | |
2021-09-25 17:51 | kgv | Note Edited: 0104375 | |
2021-09-25 17:51 | kgv | Summary | Data Exchange, STEP import - BRepBndLib returns too large Bounding Box => Data Exchange, STEP import - bounding box is too large |
2021-11-01 18:13 | szy | Target Version | 7.6.0 => 7.7.0 |